--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br /> Enim unde ad ratione vel laborum odit.
                 </p>
                 <button class="download">Download CV</button>
-                <button class="workclear">Work with me!</button>
+                <button class="work">Work with me!</button>
             </main>
 
             <img src="img/identity3-removebg-preview.png" alt="identity3" />
